# vector-db-becnhmark

./: .gitignore  Cargo.toml  Makefile  README.md
goose/: Cargo.toml  Makefile
goose/src/: main.rs
import/: Cargo.toml  Makefile
import/src/: main.rs
scripts/: bench_casper.sh  bench_qdrant.sh  common.sh
