[package]
name = "goose-load-test"
version = "0.1.0"
edition = "2024"
description = "Goose load testing for Casper vector search"

[dependencies]
goose = "0.18"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static", "zlib"] }
ndarray = "0.15"
qdrant-client = "~1.17"
casper-vdb = "0.1.3"
