[package]
name = "import-rs"
version = "0.1.0"
edition = "2024"
description = "Rust port of scripts/import — bulk-loads vectors into Casper or Qdrant"

[[bin]]
name = "import"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
byteorder = "1"
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static", "zlib"] }
ndarray = "0.15"
